# Mutant

./: .gitignore  .pre-commit-config.yml  DEVELOP.md  DEV_README.md  Dockerfile  Makefile  README.md  README_DEV.md  docker-compose.server.example.yml  docker-compose.test.yml  docker-compose.yml  load_parquet.ipynb  log_config.yml  new_api.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
.github/workflows/: mutant-client-test.yml  mutant-release.yml  mutant-server-publish.yml  mutant-server-release.yml  mutant-server-test.yml  mutant-test.yml
config/: backup_disk.xml
doc/MIP/: 1-MIP_Mutant_Imrpovment_Proposals
doc/adr/: 2024-4-4-unified-codebase.md  3-datamodel.md  clickhouse-architecture.md
doc/adr/1-first-mvp-architecture/: mvp-architecture.md
doc/architecture/: mvp-architecture.md
examples/: test.py
examples/misc/: play.py
examples/sample-app/: README.md  app.py
examples/sample-script/: sample_script.py
examples/yolo/: results.py  yolov3.py
mutant/: __init__.py  app.py  config.py  errors.py  logger.py  worker.py
mutant-client/: .gitignore  DEVELOP.md  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.py  tox.ini
mutant-client/src/cli/: command.py
mutant-client/src/mutant_client/: client.py
mutant-client/tests/: test_client.py
mutant-server/: .dockerignore  .env  .gitignore  Dockerfile  DockerfileCelery  README.md  app.py  docker-compose.test.yml  mutant-in-notebook.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh  worker.py
mutant-server/mutant_server/: api.py  core.py  in-memory_demo.ipynb  routes.py  utils.py  worker.py
mutant-server/mutant_server/algorithms/: rand_subsample.py  stub_distances.py
mutant-server/mutant_server/db/: abstract.py  clickhouse.py  duckdb.py
mutant-server/mutant_server/index/: abstract.py  hnswlib.py
mutant-server/mutant_server/test/: test_api.py  test_client.py
mutant-server/mutant_server/types/: __init__.py
mutant-server/mutant_server/utils/: error_reporting.py
mutant-server/mutant_server/utils/config/: settings.py
mutant-server/mutant_server/utils/telemetry/: abstract.py  capture.py
mutant-server/test/: test_api.py
mutant/algorithms/: core_algorithms.py  core_algorithms_examples.ipynb
mutant/api/: __init__.py  arrowflight.py  celery.py  fastapi.py  local.py
mutant/db/: __init__.py  clickhouse.py  duckdb.py
mutant/db/index/: __init__.py  hnswlib.py
mutant/server/: __init__.py  fastapi.py
mutant/server/fastapi/: __init__.py  types.py
mutant/server/utils/: error_reporting.py
mutant/test/: test_api.py  test_mutant.py
mutant/utils/: sampling.py
mutantdb/: __init__.py  app.py  config.py  errors.py  worker.py
mutantdb/algorithms/: core_algorithms.py  core_algorithms_examples.ipynb
mutantdb/api/: __init__.py  arrowflight.py  celery.py  fastapi.py  local.py  segment.py  types.py
mutantdb/api/models/: Collection.py
mutantdb/db/: __init__.py  api.py  base.py  clickhouse.py  duckdb.py  migrations.py  system.py
mutantdb/db/impl/: sqlite.py
mutantdb/db/index/: __init__.py  hnswlib.py
mutantdb/db/mixins/: embeddings_queue.py  sysdb.py
mutantdb/experimental/: density_relevance.ipynb
mutantdb/ingest/: __init__.py
mutantdb/segment/: __init__.py
mutantdb/server/: __init__.py  arrowflight.py
mutantdb/server/fastapi/: __init__.py  types.py
mutantdb/server/utils/: error_reporting.py
mutantdb/telemetry/: __init__.py  events.py  posthog.py
mutantdb/test/: conftest.py  test_api.py  test_chroma.py  test_client.py  test_config.py  test_multithreaded.py  test_mutant.py
mutantdb/test/db/: test_base.py  test_migrations.py  test_system.py
mutantdb/test/ingest/: test_producer_consumer.py
mutantdb/test/property/: invariants.py  strategies.py  test_add.py  test_collections.py  test_cross_version_persist.py  (+3 more)
mutantdb/utils/: delete_file.py  embedding_functions.py  sampling.py
(+14 files in other folders)
