[project]
name = "mutant"
dynamic = ["version"]

authors = [
    { name="Yang Bai", email="beck@hawk.iit.edu"}
]
description = "Mutant. Currently based on Chroma."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]
dependencies = [
    'pyarrow ~= 9.0',
    'pandas ~= 1.3',
    'requests ~= 2.28',
    'requests ~= 2.28',
    'pydantic ~= 1.9',
    'hdbscan ~= 0.8.32',
    'hnswlib ~=0.8.0',
    'duckdb ~= 0.5',
    'posthog ~= 2.1',
    'uuid ~= 1.30',
    'clickhouse_driver ~= 0.2.4'
]

[tool.black]
line-length = 100
required-version = "24.3.0" # Black will refuse to run if it's not this version.
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.pytest.init_options]
pythonpath = ["."]

[project.urls]
"Homepage" = "https://github.com/ybai55/Mutant"
"Bug Tracker" = "https://github.com/ybai55/Mutant/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["mutant"]
