[project]
name = "mutantdb"
dynamic = ["version"]

authors = [
    { name="Yang Bai", email="beck@hawk.iit.edu"}
]
description = "Mutant. Currently based on Mutant."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests >= 2.28',
    'pydantic>=1.9,<2.0',
    'chroma-hnswlib==0.7.2',
    'fastapi>=0.95.2, <0.100.0',
    'uvicorn[standard] >= 0.18.3',
    'numpy >= 1.21.6',
    'posthog >= 2.4.0',
    'typing_extensions >= 4.5.0',
    'pulsar-client>=3.1.0',
    'onnxruntime >= 1.14.1',
    'tokenizers >= 0.13.2',
    'pypika >= 0.48.9',
    'tqdm >= 4.65.0',
    'overrides >= 7.3.1',
    'importlib-resources',
    'graphlib_backport >= 1.0.3'
]

[tool.black]
line-length = 88
required-version = "24.3.0" # Black will refuse to run if it's not this version.
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.pytest.init_options]
pythonpath = ["."]

[project.urls]
"Homepage" = "https://github.com/ybai55/Mutant"
"Bug Tracker" = "https://github.com/ybai55/Mutant/issues"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["mutantdb"]
