[project]
name = "mutant_client"
dynamic = ["version"]
dependencies = [
    'pyarrow ~= 9.0',
    'requests ~= 2.28',
]

authors = [
    { name="Yang Bai", email="beck@hawk.iit.edu"}
]
description = "Mutant. Currently based on Chroma."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ybai55/Mutant"
"Bug Tracker" = "https://github.com/ybai55/Mutant/issues"

[tool.pytest.init_options]
pythonpath = [
    "src"
]

[tool.setuptools_scm]
root=".."
local_schema="dirty-tag"

[options.extras_require]
test = [
    'pytest',
    'httpx'
]