[project]
name = "mutant_server"
dynamic = ["version"]

authors = [
    { name="Yang Bai", email="beck@hawk.iit.edu"}
]
description = "Mutant"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/ybai55/Mutant"
"Bug Tracker" = "https://github.com/ybai55/Mutant/issues"

[tool.setuptools_scm]
root=".."
local_scheme="no-local-version"